#34228 xerces2.jar removed from system classloader.